--- a/.github/workflows/nodejs/nodejs-16-test.yaml
+++ b/.github/workflows/nodejs/nodejs-16-test.yaml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 jobs:
   build:
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [16.x]
