--- a/.github/workflows/nodejs-16-test.yaml
+++ b/.github/workflows/nodejs-16-test.yaml
@@ -1,10 +1,7 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ "staging" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_call:
 jobs:
   build:
     runs-on: ubuntu-latest
