--- a/.github/workflows/nodejs-16-test.yml
+++ b/.github/workflows/nodejs-16-test.yml
@@ -17,5 +17,7 @@ jobs:
         cache: 'npm'
     #- run: npm ci
     #- run: npm run build --if-present
-    - run: npm install
-    - run: npm run test
+    - name: Installing dependecies
+      run: npm install
+    - name: Running tests
+      run: npm run test
