--- a/.github/workflows/nodejs-16-test.yml
+++ b/.github/workflows/nodejs-16-test.yml
@@ -18,5 +18,5 @@ jobs:
         cache: 'npm'
     - name: "[Pre] Installing dependecies"
       run: npm install
-    - name: "[Running] tests"
+    - name: "[Running] npm run test"
       run: npm run test
