--- a/.github/workflows/nodejs-16-build.yml
+++ b/.github/workflows/nodejs-16-build.yml
@@ -9,14 +9,20 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-    - name: "[Default] Repo initialization"
+    - name: "[Pre] Repo initialization"
       uses: actions/checkout@v3
-    - name: "[Default] Using nodejs version ${{ matrix.node-version }}"
+    - name: "[Pre] Using nodejs version ${{ matrix.node-version }}"
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: "[Pre] Installing dependecies"
       run: npm install
-    - name: "[Running] npm run build"
+    - name: "[Running] Building artifacts"
       run: npm run build
+    - name: "[Running] Uploading artifacts"
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: dist
+
