--- a/.github/workflows/nodejs-16-build.yml
+++ b/.github/workflows/nodejs-16-build.yml
@@ -21,7 +21,7 @@ jobs:
     - name: "[Running] Building artifacts"
       run: |
         npm run build
-        dist/global-personal-data-api-linux-x64
+        ls dist
     - name: "[Running] Uploading artifacts"
       uses: actions/upload-artifact@v2
       with:
