Testing nodejs pkg

--- a/.github/workflows/nodejs-16-build.yml
+++ b/.github/workflows/nodejs-16-build.yml
@@ -25,6 +25,6 @@ jobs:
     - name: "[Running] Uploading artifacts"
       uses: actions/upload-artifact@v2
       with:
-        name: my-artifact
+        name: global-personal-data-api-linux
         path: dist/global-personal-data-api-linux
 
