--- a/.github/workflows/nodejs-16-deploy.yml
+++ b/.github/workflows/nodejs-16-deploy.yml
@@ -9,21 +9,8 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-      - name: "[Pre] Using nodejs version ${{ matrix.node-version }}"
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
       - name: "[Pre] Downloading Artifacts"
         uses: actions/download-artifact@v2
         with:
-          name: my-artifact
-      - run: node src/index.js
-      - run: node test/index.spec.js
-    # - name: "[Pre] Repo initialization"
-      # uses: actions/checkout@v3
-    
-    # - name: "[Pre] Installing dependecies"
-      # run: npm install
-    # - name: "[Running] npm run start"
-      # run: npm run start
+          name: global-personal-data-api-linux
+      - run: ./global-personal-data-api-linux
