Testing nodejs pkg

--- a/.github/workflows/nodejs-16-deploy.yml
+++ b/.github/workflows/nodejs-16-deploy.yml
@@ -13,4 +13,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: global-personal-data-api-linux
-      - run: ./global-personal-data-api-linux
+      - run: |
+          chmod +x global-personal-data-api-linux
+          ./global-personal-data-api-linux
