--- a/.github/workflows/nodejs-16-test.yml
+++ b/.github/workflows/nodejs-16-test.yml
@@ -15,6 +15,7 @@ jobs:
         node-version: [16.x]
     steps:
     - run: echo ${{ inputs.repo_name }}
+    - run: echo ${{ github.repository }}
     - name: "[Default] Repo initialization"
       uses: actions/checkout@v3
     - name: "[Default] Using nodejs version ${{ matrix.node-version }}"
