--- a/.github/workflows/nodejs-16-test.yml
+++ b/.github/workflows/nodejs-16-test.yml
@@ -1,29 +1,32 @@
-name: Node.js CI
+name: nodejs-16-testing
 
 on:
   workflow_call:
-    inputs:
-      repo_name:
-        description: 'Repository name' 
-        required: true
-        type: string
+    # inputs:
+    #   repo_name:
+    #     description: 'Repository name' 
+    #     required: true
+    #     type: string
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [16.x]
     steps:
-    - run: echo ${{ inputs.repo_name }}
-    - run: echo ${{ github.repository }}
-    - name: "[Default] Repo initialization"
-      uses: actions/checkout@v3
-    - name: "[Default] Using nodejs version ${{ matrix.node-version }}"
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: "[Pre] Installing dependecies"
-      run: npm install
-    - name: "[Running] npm run test"
+    # - run: echo ${{ inputs.repo_name }}
+    # - run: echo ${{ github.repository }}
+    # - name: "[Default] Repo initialization"
+    #   uses: actions/checkout@v3
+    # - name: "[Default] Using nodejs version ${{ matrix.node-version }}"
+    #   uses: actions/setup-node@v3
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    #     cache: 'npm'
+    # - name: "[Pre] Installing dependecies"
+    #   run: npm install
+    - name: Pre
+      uses: iolave/.github/workflows/nodejs-16-pre.yaml@main
+    - name: "Running tests"
       run: npm run test
+    
