--- a/.github/workflows/nodejs-16-build.yml
+++ b/.github/workflows/nodejs-16-build.yml
@@ -21,11 +21,9 @@ jobs:
     - name: "Building artifacts"
       run: |
         npm run build
-        echo ::set-env name=TF_VAR_instance_label::${GITHUB_REPOSITORY#*/}-${GITHUB_SHA:0:7}
-
-
+        # echo ::set-env name=TF_VAR_instance_label::${GITHUB_REPOSITORY#*/}-${GITHUB_SHA:0:7}
     - name: "Uploading artifacts"
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ github.repo }}-${{ github.hash }}
+        name: "${{ github.event.repository.name }}-${{ github.sha }}"
         path: dist/app
