--- a/.github/workflows/nodejs-16-build.yml
+++ b/.github/workflows/nodejs-16-build.yml
@@ -18,7 +18,7 @@ jobs:
         cache: 'npm'
     - name: Setting up env
       run: |
-        echo "GITHUB_ARTIFACT_NAME=$(echo ${GITHUB_REPOSITORY#*/}-${GITHUB_SHA:0:7}" >> $GITHUB_ENV
+        echo "GITHUB_ARTIFACT_NAME=$(echo ${GITHUB_REPOSITORY#*/}-${GITHUB_SHA:0:7})" >> $GITHUB_ENV
     - name: "Installing npm packages"
       run: npm install
     - name: "Building artifacts"
